getFirst() -> get(0)
https://docs.oracle.com/en/java/javase//21/docs/api/java.base/java/util/List.html#getFirst()